# tauri-plugin-sql-transaction

./: CHANGELOG.md  Cargo.toml  PUBLISHING.md  README.md  package.json  pnpm-lock.yaml  requirements.md
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/autogenerated/: reference.md
scripts/: release.sh
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  tests.rs
